<?xml version="1.0" encoding="utf-8"?>
<!-- Fichier : res/menu/simple_bottom_nav.xml -->
<!-- Rôle : navigation basse Simple (Étape 3). Historique et Réglages
     arrivent aux Étapes 4-5 (message "bientôt disponible"). -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_scan"
        android:icon="@drawable/ic_scan"
        android:title="@string/nav_scan"
        android:iconTint="@color/nav_item_colors"
        android:checkable="true" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history"
        android:iconTint="@color/nav_item_colors"
        android:checkable="true" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"
        android:iconTint="@color/nav_item_colors"
        android:checkable="true" />
</menu>